--- a/css/main.css
+++ b/css/main.css
@@ -78,19 +78,19 @@ body {
 }
 
 .ghostlookup{
-  margin-top: 25px;
-  display: flex;
+  position: relative;
   width: 100%;
+  height: 100%
 }
 
 .ghosts {
-  width: 100%;
   margin: 0 auto;
+  width: 50%;
 }
 
 .events {
-  width: 100%;
   margin: 0 auto;
+  width: 50%;
 }
 
 .gbutton {
