--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 /*-navbar links-*/
 .navbar a {
   float: left;
-  font-size: 16px;
+  font-size: 14px;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -169,11 +169,16 @@ body {
   background-color: inherit;
 }
 
-/*
+
 .disable{
-  opacity: 0.6;
-  cursor: not-allowed;
+  opacity: 0.3!important;
+  cursor: not-allowed!important;
+  pointer-events: none;
 }
-*/
+
+.active{
+  background-color: black;
+  color: white;
+}
 
 /* <!-- --> */
